--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,7 @@ services:
       - VIRTUAL_HOST=${DOMAIN:-web.local} 
       - VIRTUAL_PORT=${PORT:-8080}
       - PORT=${PORT:-8080}
+      - PRODUCTION=${PRODUCTION:-false}
     working_dir: /app
     command: >
       sh -c "go mod tidy && go run ."
